src/test/deca/context/valid/custom/object/class_new_object_constructor.deca
class Car {
    protected int maxSpeed;

    void Car(int maxSpeed) {
        this.maxSpeed = maxSpeed;
    }

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }

    int getMaxSpeed(int newSpeed) {
        return maxSpeed;
    }
}

{
    Car car1 = new Car();
    car1.setMaxSpeed(5);
}