src/test/deca/context/invalid/custom/object/decl_class_constructor.deca
class Car {
    protected int maxSpeed;

    void Car() {
        this.maxSpeed = max;
    }

    void setMaxSpeed(int newSpeed) {
        maxSpeed = newSpeed;
    }

    int getMaxSpeed(int newSpeed) {
            return maxSpeed;
    }
}